--- a/SoundByte.UWP/Views/Search.xaml
+++ b/SoundByte.UWP/Views/Search.xaml
@@ -73,8 +73,8 @@
                                 x:Name="MainSearchBox" />
 
             <StackPanel x:Name="DesktopCommandBar" Visibility="Collapsed"  Orientation="Horizontal" Margin="10,10,0,20" VerticalAlignment="Top">
-                <uiElements:CircleButton  Margin="0,0,5,0" Label="Filter Results" Glyph="&#xE71C;" Click="{x:Bind ViewModel.ShowFilterMenu}" />
-                <uiElements:CircleButton  Margin="0,0,5,0" Label="Refresh" Glyph="&#xE72C;" Click="{x:Bind ViewModel.RefreshAll}" />
+                <uiElements:SoundByteButton  Margin="0,0,20,0" Label="Filter Results" Glyph="&#xE71C;" Click="{x:Bind ViewModel.ShowFilterMenu}" />
+                <uiElements:SoundByteButton  Margin="0,0,20,0" Label="Refresh" Glyph="&#xE72C;" Click="{x:Bind ViewModel.RefreshAll}" />
             </StackPanel>
         </StackPanel>
 
